--- a/mission/index.html
+++ b/mission/index.html
@@ -9,33 +9,36 @@
     <title>BYU-Idaho Mission Statement</title>
     <link rel="stylesheet" href="styles/mission_style.css">
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/1234/5678/css/fonts.css" />
-
 </head>
+
 <body>
-    <div class="container">
-<section class="title">
-    <h1> MISSION STATEMENT</h1>
-    <h3> BRIGHAM YOUNG UNIVERSITY-IDAHO</h3>
-</section>
-<ul></ul>
-<p>
-Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.
+    <main class="container">
+        <section class="title">
+            <h1> MISSION STATEMENT</h1>
+            <h3> BRIGHAM YOUNG UNIVERSITY-IDAHO</h3>
+        </section>  
+        <section class ="content">
+            <p>
+                Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.
+            </p>
 
-The university does this by:
+            <p class = "italic">
+                The university does this by:
+            </p>
 
-1. Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment. 
-2. Providing a high-quality education that prepares students of diverse interests and abilities for lifelong learning and employment. 
-3. Serving as many students as possible within resource constraints. 
-4. Delivering education that is affordable for students and the Church.
-</p>
+                <ol>
+                    <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.</li>
+                    <li>Providing a high-quality education that prepares students of diverse interests and abilities for lifelong learning and employment.</li>
+                    <li>Serving as many students as possible within resource constraints.</li>
+                    <li>Delivering education that is affordable for students and the Church.</li>
+                </ol>
+        </section>
+
+
+        <div class="logo-section">
+            <img src="images/byui_logo.png" alt="BYU-Idaho Logo" class="logo">
+        </div>
+    </main>
 
 </body>
-<footer>
-<section class="logo-section">
-    <logo>
-        <a href="mission/images"><img src="images/byui_logo.png" alt="BYU-Idaho Logo" class="logo"></a>
-    </logo>
-</section>
-</div>
-</footer>
 </html>
